[gd_scene load_steps=3 format=3 uid="uid://cvddht0nhjnnv"]

[ext_resource type="PackedScene" uid="uid://dn5e4dj2bx1ci" path="res://scenes/entity_base.tscn" id="1_ue32j"]
[ext_resource type="Script" path="res://scripts/emitter.gd" id="2_uylrq"]

[node name="Emitter" instance=ExtResource("1_ue32j")]
script = ExtResource("2_uylrq")
emission_delay = 4.2
start_delay = -1.0
emission_count = 20
max_emissions = 40
time_between_entities = 0.2
entity_speed = 40.0

[node name="EmissionTimer" type="Timer" parent="." index="4"]
wait_time = 99999.0

[node name="DelayedStartTimer" type="Timer" parent="." index="5"]
one_shot = true

[connection signal="timeout" from="DelayedStartTimer" to="." method="_on_delayed_start_timer_timeout"]
